--- a/viesapiLibrary/viesapiCom.csproj
+++ b/viesapiLibrary/viesapiCom.csproj
@@ -44,11 +44,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountStatus.cs" />
+    <Compile Include="NameComponents.cs" />
     <Compile Include="AddressComponents.cs" />
     <Compile Include="BatchResult.cs" />
     <Compile Include="Error.cs" />
     <Compile Include="EUVAT.cs" />
     <Compile Include="NIP.cs" />
+    <Compile Include="LegalForm.cs" />
     <Compile Include="Number.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
