--- a/viesapiLibrary/viesapiCom.csproj
+++ b/viesapiLibrary/viesapiCom.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountStatus.cs" />
+    <Compile Include="CountryStatus.cs" />
     <Compile Include="NameComponents.cs" />
     <Compile Include="AddressComponents.cs" />
     <Compile Include="BatchResult.cs" />
@@ -66,6 +67,7 @@
     </Compile>
     <Compile Include="VIESData.cs" />
     <Compile Include="VIESError.cs" />
+    <Compile Include="VIESStatus.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
