--- a/viesapiLibrary/viesapiLibrary.csproj
+++ b/viesapiLibrary/viesapiLibrary.csproj
@@ -5,18 +5,19 @@
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 
 		<PackageId>VIESAPI.VIESAPIClient</PackageId>
-		<Version>1.3.0</Version>
-		<AssemblyVersion>1.3.0.0</AssemblyVersion>
-		<FileVersion>1.3.0.0</FileVersion>
+		<Version>1.3.1</Version>
+		<AssemblyVersion>1.3.1.0</AssemblyVersion>
+		<FileVersion>1.3.1.0</FileVersion>
 
 		<Title>VIES API Service Client</Title>
 		<Summary>VIES API Service Client for .NET Framework (C#)</Summary>
-		<Description>Viesapi.eu service provides selected entrepreneurs data using i.a. web services, programming libraries and dedicated applications.
-By using the available software (libraries, applications and Excel add-in) your customers will be able to:
+		<Description>VIES API provides selected entrepreneurs' data using, among others, web services, programming
+libraries, and dedicated applications. By using the available software (libraries, applications and Excel add-in)
+your customers will be able to:
 
-* check contractors EU VAT number status in VIES system,
+* check contractors' EU VAT number status in VIES system,
 * download company details from VIES system,
-* automatic fill in the invoice forms,
+* automatically fill in the invoice forms,
 
 in the fastest possible way.</Description>
 
@@ -26,13 +27,36 @@ in the fastest possible way.</Description>
 		<Copyright>Copyright © 2022-2025 by NETCAT (www.netcat.pl)</Copyright>
 		<PackageLicenseUrl></PackageLicenseUrl>
 		<PackageProjectUrl>https://viesapi.eu</PackageProjectUrl>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 
 		<RequireLicenseAcceptance>false</RequireLicenseAcceptance>
-		<PackageTags>viesapi;api;vat;nip;eu;vies;validator</PackageTags>
+		<PackageTags>viesapi;api;sdk;vat;nip;eu;vies;validator;batch</PackageTags>
 		<SignAssembly>true</SignAssembly>
 		<AssemblyOriginatorKeyFile>viesapiLibrary.snk</AssemblyOriginatorKeyFile>
 		<DelaySign>false</DelaySign>
 	</PropertyGroup>
+	
+	<PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+		<TargetsForTfmSpecificBuildOutput>SignAssemblies;$(TargetsForTfmSpecificBuildOutput)</TargetsForTfmSpecificBuildOutput>
+		<ProgramFilesX86>$([System.Environment]::GetEnvironmentVariable('ProgramFiles(x86)'))</ProgramFilesX86>
+	</PropertyGroup>
+	
+	<Target Name="SignAssemblies" Condition=" '$(Configuration)' == 'Release' ">
+		<ItemGroup>
+			<PossibleSignTools Include="$(ProgramFilesX86)\Windows Kits\10\bin\*\x86\signtool.exe" />
+			<ToSign Include="$(TargetPath)" />
+		</ItemGroup>
+		
+		<PropertyGroup>
+			<SigntoolPath Condition=" '$(SigntoolPath)' == '' ">%(PossibleSignTools.FullPath)</SigntoolPath>
+		</PropertyGroup>
+		
+		<Message Text="Signing using: $(SigntoolPath)" Importance="High" />
+		
+		<Exec Command="&quot;$(SigntoolPath)&quot; sign /fd SHA256 /n NETCAT /td SHA256 /tr &quot;http://public-qlts.certum.pl/qts-17&quot; @(ToSign->'&quot;%(FullPath)&quot;',' ')"
+			StandardOutputImportance="High"
+			StandardErrorImportance="High" />
+	</Target>
 
 	<ItemGroup Condition=" '$(TargetFramework)' == 'net35' ">
 		<Reference Include="System" />
