--- a/viesapiLibrary/viesapiLibrary.csproj
+++ b/viesapiLibrary/viesapiLibrary.csproj
@@ -5,9 +5,9 @@
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 
 		<PackageId>VIESAPI.VIESAPIClient</PackageId>
-		<Version>1.3.1</Version>
-		<AssemblyVersion>1.3.1.0</AssemblyVersion>
-		<FileVersion>1.3.1.0</FileVersion>
+		<Version>1.3.2</Version>
+		<AssemblyVersion>1.3.2.0</AssemblyVersion>
+		<FileVersion>1.3.2.0</FileVersion>
 
 		<Title>VIES API Service Client</Title>
 		<Summary>VIES API Service Client for .NET Framework (C#)</Summary>
@@ -53,7 +53,7 @@ in the fastest possible way.</Description>
 		
 		<Message Text="Signing using: $(SigntoolPath)" Importance="High" />
 		
-		<Exec Command="&quot;$(SigntoolPath)&quot; sign /fd SHA256 /n NETCAT /td SHA256 /tr &quot;http://public-qlts.certum.pl/qts-17&quot; @(ToSign->'&quot;%(FullPath)&quot;',' ')"
+		<Exec Command="&quot;$(SigntoolPath)&quot; sign /fd SHA256 /n NETCAT /td SHA256 /tr &quot;http://time.certum.pl&quot; @(ToSign->'&quot;%(FullPath)&quot;',' ')"
 			StandardOutputImportance="High"
 			StandardErrorImportance="High" />
 	</Target>
